explicit-gateway-host/examples/require-explicit-gateway-host/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: IstioExplicitGatewayHost
metadata:
  name: explicitgatewayhost
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["networking.istio.io"]
      kinds: ["Gateway"]
  parameters:
    disallowedHosts:
    - "*"
