explicit-gateway-host/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Prohibits wildcard host configuration
  name: istioexplicitgatewayhost
spec:
  crd:
    spec:
      names:
        kind: IstioExplicitGatewayHost
      validation:
        openAPIV3Schema:
          type: object
          properties:
            disallowedHosts:
              type: array
              items:
                type: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |-
      # https://istio.io/latest/docs/ops/best-practices/security/#avoid-overly-broad-hosts-configurations
      package istio.security.gatewayhost

      import future.keywords

      violation[{"msg": msg}] {
        disallowed_hosts := input.parameters.disallowedHosts
        gateway := input.review.object
        servers := gateway.spec.servers[_]

        some h in disallowed_hosts
        _contains(servers.hosts, h)
        
        msg := sprintf("spec.servers.hosts: %v", [servers.hosts])
      }

      _contains(arr, elem) {
        endswith(arr[_], elem)
      }
